# DomiBot

./: - joint limit when domino is in the corner - fix u  .gitignore  README.md
cv/: cv.py  take_pic.py  take_pic.py~  video.py
cv/calibration/: calibration.py
cv/domi/: calibration.py  calibration.py~  detectors.py  draw.py  filters.py  strategy.py  write.py
cv_tests/: contour_to_corner.py  cv.py
cv_tests/domi/: calibration.py  detectors.py  draw.py  filters.py  strategy.py  write.py
opt_alg/: cv_dom_alg_two_ends.ipynb  desired_orientation_position.py  dominoe_algorithm.jl  next_piece.py  randomize_dominoe.jl
opt_alg/.ipynb_checkpoints/: cv_dom_alg_two_ends-checkpoint.ipynb
robot_code/: TorqueOverlayApp.cpp  TorqueOverlayClient.cpp  TorqueOverlayClient.h
robot_code/SchunkGripper/: CMakeLists.txt  CMakeLists.txt~  README.txt  package.xml
robot_code/SchunkGripper/include/: SchunkGripper.h
robot_code/SchunkGripper/src/: SchunkGripper.cpp
robot_code/gripperStandalone/: CMakeLists.txt~  GripperMain.cpp  GripperMain.cpp~  comrun  package.xml  run
robot_code/gripperStandalone/unused/: CMakeLists.txt  GripperMain.cpp  mainwindow.h  mainwindow.ui
shared/: Domi.cpp  Domi.h  Shared.cpp  Shared.h  comments.txt
simulation/: .gitignore  CMakeLists.txt  README.txt  error.txt  make_dbg.sh  make_rel.sh  project  project.cpp  scl_tutorial5_control_multi_task.cpp  trajectory_gen.cpp
simulation/build_rel/: CMakeCache.txt  Makefile  cmake_install.cmake  project
simulation/kuka_iiwa/: README.txt  iiwa.xml  iiwaCfg.xml
